<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Tela inicial -->
    <string name="action_settings">Settings</string>

    <string-array name="menus">
        <item>Inicio</item>
        <item>Listar Sintomas</item>
        <item>Tutorial</item>
        <item>Versão</item>
    </string-array>

    <!-- FIM -->


    <!-- Activity Principal -->
    <string name="b_princ_freguentes">Mais Freguentes</string>
    <string name="b_princ_dores">Dores</string>
    <string name="b_pric_superiores">Partes superior</string>
    <string name="b_pric_inferiores">Partes Inferiores</string>
    

    <!-- FIM -->

    <string name="app_name">SAD_diagnostico</string>
    <string name="hello_world">Hello world!</string>
    <string name="b_reiniciar">Reiniciar</string>
    <string name="B_Sair">Abandonar</string>
    <string name="s_pergunta">Pergunta aqui</string>
    <string name="s_select1">Escolha 1</string>
    <string name="b_proximo">Proximo</string>
    <string name="r_nao">Não</string>
    <string name="r_sim">SIM</string>
    <string name="s_select2">Escolha2</string>

    <dimen name="count">10dp</dimen>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    
    <!-- Activity Resultado -->
    <string name="text_result_titulo">Baseado nos Sinais e Sintomas escolhidos, você apresenta Sintomas de:</string>
    <string name="text_result_doenca">Doença</string>
    <!-- Fim -->

</resources>