<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_person" >

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="405dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_princ_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </RadioGroup>

        <TextView
            android:id="@+id/text_princ_escolhido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textSize="20dp" />

        <Button
            android:id="@+id/b_princ_inicia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Iniciar" />

        <Button
            android:id="@+id/b_princ_freguente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_princ_freguentes" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_princ_dores" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_pric_superiores" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_pric_inferiores" />

    </LinearLayout>

</ScrollView>