<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="444dp" >

        <TextView
            android:id="@+id/t_pergunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:gravity="center"
            android:text="@string/s_pergunta"
            android:textSize="20dp" />

        <RadioGroup
            android:id="@+id/rg_perguntas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t_pergunta"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp" >

            <RadioButton
                android:id="@+id/r_sim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_sim" />

            <RadioButton
                android:id="@+id/r_nao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_nao" />

            <Button
                android:id="@+id/b_proximo"
                style="@style/button_proximo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:background="@drawable/butto_verde"
                android:text="@string/b_proximo" />
        </RadioGroup>

        <TextView
            android:id="@+id/t_numsit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/t_pergunta"
            android:layout_below="@+id/rg_perguntas"
            android:layout_marginTop="71dp"
            android:gravity="center"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/t_sint_escol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t_numsit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="Sintomas Escolhidos"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/b_abandonar"
            style="@style/button_proximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="21dp"
            android:background="@drawable/butto_vermelho"
            android:text="@string/B_Sair" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true" >

            <TextView
                android:id="@+id/t_escolha1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="42dp"
                android:text="@string/s_select1" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>